--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,9 +121,11 @@ jobs:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
     steps:
-      - name: Setup go 1.14
+      - name: Setup go 1.16
         uses: actions/setup-go@v2
-        with: {go-version: '1.14'}
+        with:
+          stable: false
+          go-version: 1.16.0-rc1
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Download dependencies
