--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,6 @@ jobs:
           mv repo/vendor path/src
           mkdir -p path/src/github.com/forensicanalysis
           mv repo path/src/github.com/forensicanalysis/recursivefs
-          cp -r path/src/github.com/forensicanalysis/recursivefs/replace/context path/src
           # echo "package afero" > path/src/github.com/spf13/afero/memmap.go
 
           mkdir -p path/src/io path/src/internal
@@ -146,7 +145,7 @@ jobs:
         working-directory: ./cmd/fs
         shell: bash
       - name: Bats test
-        run: bats test/fs.bats
+        run: bats testdata/fs.bats
         shell: bash
       - name: Upload
         uses: actions/upload-artifact@master
