--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           stable: false
-          go-version: 1.16.0-rc1
+          go-version: 1.16.0
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Download dependencies
@@ -59,7 +59,7 @@ jobs:
         uses: actions/setup-go@v2
         with:
           stable: false
-          go-version: 1.16.0-rc1
+          go-version: 1.16.0
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Download dependencies
