--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: v1.52.2
           args: --verbose --config .github/.golangci.yml --enable gofmt --enable goimports
         if: matrix.os != 'windows-latest'
       - name: Lint Windows
