--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Lint Windows
         uses: golangci/golangci-lint-action@v3
         with:
-          version: latest
+          version: v1.52.2
           args: --verbose --config .github/.golangci.yml
         if: matrix.os == 'windows-latest'
 
